# armUS2026

./: .gitignore  Dockerfile  README.md  docker-compose.yml
Arduino/: ARDUINO_SETUP.md  README.md  pico_test_sender.py
Arduino/libraries/C620/: C620.cpp  C620.h
Arduino/libraries/CalPID/: CalPID.cpp  CalPID.h
Arduino/libraries/RPI_PICO_TimerInterrupt/: library.properties
Arduino/libraries/dataDecoder/: dataDecoder.cpp  dataDecoder.h
Arduino/libraries/dataEncoder/: dataEncoder.cpp  dataEncoder.h  library.properties
Arduino/libraries/dataEncoder/examples/talkingToMyself_Serial/: talkingToMyself_Serial.ino
Arduino/libraries/dataEncoder/examples/talkingToMyself_withoutComm/: talkingToMyself_withoutComm.ino
Arduino/libraries/mcp2515/: library.properties  mcp2515.cpp  mcp2515.h
Arduino/libraries/motorControl/: library.properties  motorControl.cpp
Arduino/libraries/motorControl/examples/motor_multiple_pico/: motor_multiple_pico.ino
Arduino/libraries/motorControl/examples/motor_single_angle_pico/: motor_single_angle_pico.ino
Arduino/libraries/motorControl/examples/motor_single_speed_pico/: motor_single_speed_pico.ino
Arduino/motorControlExample/: goo.ino  motorControl.cpp  motorControl.h
Arduino/pico_blink_test/: pico_blink_test.ino
Arduino/pico_j123/: C620.cpp  motorControl.cpp  motorControl.h  pico_j123.ino
Arduino/pico_j456/: pico_j456.ino
arm_controller/: CMakeLists.txt  package.xml
karura_arm_description/: CMakeLists.txt  package.xml  setup.py
karura_arm_description/launch/: display.launch.py
karura_arm_description/meshes/: base_link.stl  link_1.stl  link_2.stl  link_3.stl  link_4.stl  link_5.stl  link_6.stl  link_7.stl
karura_arm_description/urdf/: karura_arm_2026.gazebo  karura_arm_2026.trans  karura_arm_2026.xacro  materials.xacro
karura_arm_moveit_config/: CMakeLists.txt  package.xml  t.setup_assistant
karura_arm_moveit_config/config/: initial_positions.yaml  joint_limits.yaml  karura_arm_description.ros2_control.xacro  karura_arm_description.srdf  karura_arm_description.urdf.xacro  moveit_controllers.yaml  ros2_controllers.yaml  simulated_config.yaml
karura_arm_moveit_config/launch/: demo.launch.py  move_group.launch.py  moveit_rviz.launch.py  rsp.launch.py  servo2.launch.py  setup_assistant.launch.py  spawn_controllers.launch.py  static_virtual_joint_tfs.launch.py  warehouse_db.launch.py
send_target_joint_degrees/: package.xml  setup.cfg  setup.py
send_target_joint_degrees/send_target_joint_degrees/: send_target_joint_degrees.py
serial_comm/: package.xml  setup.py
serial_comm/serial_comm/: Arm_serial.py
usb_camera/: package.xml  setup.cfg  setup.py
usb_camera/launch/: double_cam.launch.py  single_cam.launch.py
