<package format="3">
  <name>karura_arm_description</name>
  <version>1.0.0</version>
  <description>
    URDF description package for the Karura arm.
    This package contains configuration data, 3D models, and launch files.
  </description>

  <!-- Replace with real maintainers/authors -->
  <maintainer email="maintainer@example.com">Maintainer Name</maintainer>
  <author>Author Name</author>
  <license>TODO: License declaration</license>

  <!-- Build tool dependency: ament_cmake instead of catkin -->
  <buildtool_depend>ament_cmake</buildtool_depend>

  <!-- If you use robot_state_publisher or Rviz2 to visualize the URDF -->
  <exec_depend>robot_state_publisher</exec_depend>
  <exec_depend>rviz2</exec_depend>

  <!-- If you use the joint_state_publisher (or GUI) in ROS 2 -->
  <exec_depend>joint_state_publisher</exec_depend>
  <!-- or <exec_depend>joint_state_publisher_gui</exec_depend> if you specifically need its GUI
  package -->

  <!-- If you need Gazebo in ROS 2 (gazebo_ros is the typical ROS 2 integration) -->
  <exec_depend>gazebo_ros</exec_depend>

  <!-- Export section for ROS 2 -->
  <export>
    <build_type>ament_cmake</build_type>
    <!-- This tag can be added if the package has no platform-specific code -->
    <!-- <architecture_independent /> -->
  </export>
</package>
